BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -506,7 +506,7 @@
 
 @online{unternehmensberatung35DSGVODatenschutzGrundverordnung,
   title = {§ 35 DSGVO (Datenschutz-Grundverordnung) - JUSLINE Österreich},
-  author = {Unternehmensberatung, ADVOKAT},
+  author = {Unternehmensberatung, ADVOKAT and JUSLINE},
   url = {https://www.jusline.at/gesetz/dsgvo/paragraf/35},
   urldate = {2023-03-17},
   abstract = {Artikel 35 Datenschutz-Folgenabschätzung - Datenschutz-Grundverordnung - Gesetz, Kommentar und Diskussionsbeiträge - JUSLINE Österreich},
