BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -292,6 +292,16 @@
   file = {/Users/werner/Zotero/storage/9W54XG65/OENORM_EN_ISO_27799_2016_12_15.html}
 }
 
+@online{jusline35DSGVODatenschutzGrundverordnung,
+  title = {§ 35 DSGVO (Datenschutz-Grundverordnung) - JUSLINE Österreich},
+  author = {JUSLINE},
+  url = {https://www.jusline.at/gesetz/dsgvo/paragraf/35},
+  urldate = {2023-03-17},
+  abstract = {Artikel 35 Datenschutz-Folgenabschätzung - Datenschutz-Grundverordnung - Gesetz, Kommentar und Diskussionsbeiträge - JUSLINE Österreich},
+  langid = {ngerman},
+  file = {/Users/werner/Zotero/storage/VY4Q5TIK/35.html}
+}
+
 @misc{KSOE,
   title = {Cyber {{Risk Rating}} \& {{Cyber Trust Label}}, {{Schema Policy}} 2023 {{Version}} 3},
   author = {Kompetenzzentrum Sicheres Österreich and Cyber Trust Austria},
@@ -502,16 +512,6 @@
   isbn = {978-1-72814-362-0},
   langid = {english},
   file = {/Users/werner/Zotero/storage/GFCSCWVI/Roy - 2020 - A High-Level Comparison between the NIST Cyber Sec.pdf}
-}
-
-@online{unternehmensberatung35DSGVODatenschutzGrundverordnung,
-  title = {§ 35 DSGVO (Datenschutz-Grundverordnung) - JUSLINE Österreich},
-  author = {Unternehmensberatung, ADVOKAT and JUSLINE},
-  url = {https://www.jusline.at/gesetz/dsgvo/paragraf/35},
-  urldate = {2023-03-17},
-  abstract = {Artikel 35 Datenschutz-Folgenabschätzung - Datenschutz-Grundverordnung - Gesetz, Kommentar und Diskussionsbeiträge - JUSLINE Österreich},
-  langid = {ngerman},
-  file = {/Users/werner/Zotero/storage/VY4Q5TIK/35.html}
 }
 
 @incollection{venable_DSR_ComprehensiveFrameworkEvaluation2012,
