--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -125,14 +125,6 @@
   file = {/Users/werner/Zotero/storage/XKMFT8R8/Drivas et al. - 2020 - A NIS Directive Compliant Cybersecurity Maturity A.pdf}
 }
 
-@online{DSGVO,
-  title = {{{VERORDNUNG}} ({{EU}}) 2016/679 {{DES EUROPÄISCHEN PARLAMENTS UND DES RATES}} Vom 27. {{April}} 2016 Zum {{Schutz}} Natürlicher {{Personen}} Bei Der {{Verarbeitung}} Personenbezogener {{Daten}}, Zum Freien {{Datenverkehr}} Und Zur {{Aufhebung}} Der {{Richtlinie}} 95/46/{{EG}} ({{Datenschutz-Grundverordnung}})},
-  author = {European Parliament {and} the Council of the European Union},
-  url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:02016R0679-20160504&from=DE},
-  urldate = {2023-03-17},
-  file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
-}
-
 @online{ENISA_GuidelinesAssessingOES,
   type = {Report/Study},
   title = {Guidelines on Assessing {{DSP}} Security and {{OES}} Compliance with the {{NISD}} Security Requirements},
@@ -144,6 +136,14 @@
   langid = {english},
   organization = {{ENISA}},
   file = {/Users/werner/Zotero/storage/CFK53ZJL/Guidelines on assessing DSP security and OES compl.pdf;/Users/werner/Zotero/storage/ZIJ6FHG9/guidelines-on-assessing-dsp-security-and-oes-compliance-with-the-nisd-security-requirements.html}
+}
+
+@online{EU_DSGVO,
+  title = {{{VERORDNUNG}} ({{EU}}) 2016/679 {{DES EUROPÄISCHEN PARLAMENTS UND DES RATES}} Vom 27. {{April}} 2016 Zum {{Schutz}} Natürlicher {{Personen}} Bei Der {{Verarbeitung}} Personenbezogener {{Daten}}, Zum Freien {{Datenverkehr}} Und Zur {{Aufhebung}} Der {{Richtlinie}} 95/46/{{EG}} ({{Datenschutz-Grundverordnung}})},
+  author = {European Parliament {and} the Council of the European Union},
+  url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:02016R0679-20160504&from=DE},
+  urldate = {2023-03-17},
+  file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
 }
 
 @article{Fluchsot,
