--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -465,11 +465,9 @@
   file = {/Users/werner/Zotero/storage/R6J4HUQJ/Pries-Heje et al. - Strategies for Design Science Research Evaluation.pdf}
 }
 
-@legislation{RichtlinieEU20162016,
+@online{RichtlinieEU20162016,
   title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
   date = {2016-07-06},
-  journaltitle = {OJ L},
-  volume = {194},
   url = {http://data.europa.eu/eli/dir/2016/1148/oj/deu},
   urldate = {2023-02-20},
   langid = {ngerman},
