--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -146,6 +146,16 @@
   file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
 }
 
+@online{europeanparliamentandthecounciloftheeuropeanunionRichtlinieEU20162016,
+  title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
+  author = {European Parliament {and} the Council of the European Union},
+  date = {2016-07-06},
+  url = {http://data.europa.eu/eli/dir/2016/1148/oj/deu},
+  urldate = {2023-02-20},
+  langid = {ngerman},
+  file = {/Users/werner/Zotero/storage/UCAMXXH7/2016 - Richtlinie (EU) 20161148 des Europäischen Parlame.pdf;/Users/werner/Zotero/storage/6VPFN6L5/HTML.html}
+}
+
 @article{Fluchsot,
   title = {{{OT-Security}} von Der Norm Ins Leitsystem},
   author = {Fluchs, Sarah und Rudolph, Heiko},
@@ -463,15 +473,6 @@
   abstract = {Seminal works in the application of design science research (DSR) in IS emphasize the importance of evaluation. However, discussion of evaluation activities and methods is limited and typically assumes an ex post perspective, in which evaluation occurs after the construction of an IS artifact. Such perspectives can assume that the evaluation is an empirical process and its methods can be selected in the same way as empirical research methods. In this paper, we analyze a broader range of evaluation strategies, which includes ex ante (prior to artifact construction) evaluation. This broader view is developed as a strategic DSR evaluation framework, which expands evaluation choices for IS DSR researchers, and also adds emphasis to strategies for evaluating design processes in addition to design products, using well-known quality criteria as an important asset. The framework encompasses both ex ante and ex post orientations as well as naturalistic settings (e.g., case studies) and artificial settings (e.g., lab experiments) for DSR evaluation. The framework proposed offers a strategic view of DSR evaluation that is useful in analyzing published studies, and also in surfacing the evaluation opportunities that present themselves to IS DSR researchers.},
   langid = {english},
   file = {/Users/werner/Zotero/storage/R6J4HUQJ/Pries-Heje et al. - Strategies for Design Science Research Evaluation.pdf}
-}
-
-@online{RichtlinieEU20162016,
-  title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
-  date = {2016-07-06},
-  url = {http://data.europa.eu/eli/dir/2016/1148/oj/deu},
-  urldate = {2023-02-20},
-  langid = {ngerman},
-  file = {/Users/werner/Zotero/storage/UCAMXXH7/2016 - Richtlinie (EU) 20161148 des Europäischen Parlame.pdf;/Users/werner/Zotero/storage/6VPFN6L5/HTML.html}
 }
 
 @online{RIS_DSFAVerarbeitungsvorgangeFur,
