--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -146,7 +146,7 @@
   file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
 }
 
-@online{europeanparliamentandthecounciloftheeuropeanunionRichtlinieEU20162016,
+@online{EU_RichtlinieEU20162016,
   title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
   author = {European Parliament {and} the Council of the European Union},
   date = {2016-07-06},
