BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -219,6 +219,7 @@
   title = {{{ISO}}/{{IEC}}/{{IEEE International Standard}} - {{Systems}} and Software Engineering--{{Vocabulary}}},
   author = {ISO - International Organization for Standardization},
   date = {2017},
+  shortjournal = {ISO/IEC/IEEE 24765:2017(E)},
   pages = {1--541},
   doi = {10.1109/IEEESTD.2017.8016712},
   url = {https://ieeexplore.ieee.org/document/8016712/},
