BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -25,6 +25,15 @@
   file = {/Users/werner/Zotero/storage/NYYLZETX/sicherheitshandbuch.pdf;/Users/werner/Zotero/storage/MT7YWWYX/www.sicherheitshandbuch.gv.at.html}
 }
 
+@online{AustrianSI_OENORM7700-4,
+  title = {{{ÖNORM A}} 7700-4:2019; {{Webapplikationen}}, {{Teil}} 4: {{Anforderungen}} an Den Sicheren {{Betrieb}}},
+  author = {Austrian Standards International},
+  date = {2019-10-19},
+  url = {https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM_A_7700-4_2019_10_01},
+  urldate = {2023-02-26},
+  file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
+}
+
 @article{BERG_DSR_BoundaryObjectsDesign2007,
   title = {Boundary {{Objects}} in {{Design}}: {{An Ecological View}} of {{Design Artifacts}}},
   shorttitle = {Boundary {{Objects}} in {{Design}}},
@@ -382,15 +391,6 @@
   langid = {english},
   organization = {{ENISA}},
   file = {/Users/werner/Zotero/storage/VKIMAL5X/minimum-security-measures-for-operators-of-essentials-services.html}
-}
-
-@online{OENORM7700-4,
-  title = {{{ÖNORM A}} 7700-4:2019; {{Webapplikationen}}, {{Teil}} 4: {{Anforderungen}} an Den Sicheren {{Betrieb}}},
-  author = {Austrian Standards International},
-  date = {2019-10-19},
-  url = {https://lesesaal.austrian-standards.at/action/de/private/details/662999/OENORM_A_7700-4_2019_10_01},
-  urldate = {2023-02-26},
-  file = {/Users/werner/Zotero/storage/ECB772EW/OENORM_A_7700-4_2019_10_01.html}
 }
 
 @misc{OVE_EN50600-1,
