BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -490,6 +490,13 @@
   file = {/Users/werner/Zotero/storage/JUZYY3LB/GeltendeFassung.html}
 }
 
+@online{RISNetzUnda,
+  title = {{{RIS}} - {{Netz-}} Und {{Informationssystemsicherheitsverordnung}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 25.04.2023},
+  url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010722},
+  urldate = {2023-04-25},
+  file = {/Users/werner/Zotero/storage/83VZTAD2/GeltendeFassung.html}
+}
+
 @online{RISVerordnungUber,
   title = {{{RIS}} - {{Verordnung}} Über Qualifizierte {{Stellen}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010733},
