--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -497,7 +497,7 @@
   file = {/Users/werner/Zotero/storage/83VZTAD2/GeltendeFassung.html}
 }
 
-@online{RISVerordnungUber,
+@online{RISVerordnungUber_Quasten,
   title = {{{RIS}} - {{Verordnung}} Über Qualifizierte {{Stellen}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010733},
   urldate = {2023-02-20},
