BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -108,6 +108,14 @@
   file = {/Users/werner/Zotero/storage/CSNGHF2F/Davis - 1989 - Perceived Usefulness, Perceived Ease of Use, and U.pdf}
 }
 
+@online{DirectiveMeasuresHigh2023,
+  title = {Directive on Measures for a High Common Level of Cybersecurity across the {{Union}} ({{NIS2 Directive}}) | {{Shaping Europe}}’s Digital Future},
+  date = {2023-04-18},
+  url = {https://digital-strategy.ec.europa.eu/en/policies/nis2-directive},
+  urldate = {2023-04-26},
+  langid = {english}
+}
+
 @inproceedings{drivasNISDirectiveCompliant2020,
   title = {A {{NIS Directive Compliant Cybersecurity Maturity Assessment Framework}}},
   booktitle = {2020 {{IEEE}} 44th {{Annual Computers}}, {{Software}}, and {{Applications Conference}} ({{COMPSAC}})},
