BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -113,7 +113,8 @@
   date = {2023-04-18},
   url = {https://digital-strategy.ec.europa.eu/en/policies/nis2-directive},
   urldate = {2023-04-26},
-  langid = {english}
+  langid = {english},
+  file = {/Users/werner/Zotero/storage/R5HZI2J8/nis2-directive.html}
 }
 
 @inproceedings{drivasNISDirectiveCompliant2020,
