BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -159,6 +159,7 @@
 
 @online{European_Commission_NIS2,
   title = {Directive on Measures for a High Common Level of Cybersecurity across the {{Union}} ({{NIS2 Directive}}) | {{Shaping Europe}}’s Digital Future},
+  author = {European Commission},
   date = {2023-04-18},
   url = {https://digital-strategy.ec.europa.eu/en/policies/nis2-directive},
   urldate = {2023-04-26},
