BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -325,6 +325,16 @@
   file = {/Users/werner/Zotero/storage/VY4Q5TIK/35.html}
 }
 
+@online{kontaktformularCybersicherheitsRichtlinieNIS,
+  title = {Cybersicherheits-Richtlinie NIS 2},
+  author = {Kontaktformular, Service Center Straße der Wiener Wirtschaft 1 1020 Wien Telefon: +43 1 514 50 1010 E.-Mail:},
+  url = {https://www.wko.at/service/innovation-technologie-digitalisierung/nis2-uebersicht.html},
+  urldate = {2023-04-26},
+  abstract = {Neue Regelungen für mehr Cybersicherheit in der EU},
+  langid = {ngerman},
+  file = {/Users/werner/Zotero/storage/2MHDGIFD/nis2-uebersicht.html}
+}
+
 @misc{KSOE,
   title = {Cyber {{Risk Rating}} \& {{Cyber Trust Label}}, {{Schema Policy}} 2023 {{Version}} 3},
   author = {Kompetenzzentrum Sicheres Österreich and Cyber Trust Austria},
