BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -575,7 +575,7 @@
 
 @online{Wirtschaftskammer_Oesterreich_CybersicherheitsRichtlinieNIS,
   title = {Cybersicherheits-Richtlinie NIS 2},
-  author = {Kontaktformular, Service Center Straße der Wiener Wirtschaft 1 1020 Wien Telefon: +43 1 514 50 1010 E.-Mail:},
+  author = {Wirtschaftskammer Oesterreich},
   url = {https://www.wko.at/service/innovation-technologie-digitalisierung/nis2-uebersicht.html},
   urldate = {2023-04-26},
   abstract = {Neue Regelungen für mehr Cybersicherheit in der EU},
