--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -1,3 +1,10 @@
+@online{2022333DE01008001Xml,
+  title = {L\_{{2022333DE}}.01008001.Xml},
+  url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX%3A32022L2555},
+  urldate = {2023-04-27},
+  annotation = {Usr\_lan: DE}
+}
+
 @inproceedings{ALME_DSR_AModelAssessingCOBIT2018andISO27001,
   title = {A {{Model}} for {{Assessing COBIT}} 5 and {{ISO}} 27001 {{Simultaneously}}},
   booktitle = {2018 {{IEEE}} 20th {{Conference}} on {{Business Informatics}} ({{CBI}})},
