BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -2,7 +2,8 @@
   title = {L\_{{2022333DE}}.01008001.Xml},
   url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX%3A32022L2555},
   urldate = {2023-04-27},
-  annotation = {Usr\_lan: DE}
+  annotation = {Usr\_lan: DE},
+  file = {/Users/werner/Zotero/storage/C7RBJWPW/HTML.html}
 }
 
 @inproceedings{ALME_DSR_AModelAssessingCOBIT2018andISO27001,
