BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -1,11 +1,3 @@
-@online{2022333DE01008001Xml,
-  title = {L\_{{2022333DE}}.01008001.Xml},
-  url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX%3A32022L2555},
-  urldate = {2023-04-27},
-  annotation = {Usr\_lan: DE},
-  file = {/Users/werner/Zotero/storage/C7RBJWPW/HTML.html}
-}
-
 @inproceedings{ALME_DSR_AModelAssessingCOBIT2018andISO27001,
   title = {A {{Model}} for {{Assessing COBIT}} 5 and {{ISO}} 27001 {{Simultaneously}}},
   booktitle = {2018 {{IEEE}} 20th {{Conference}} on {{Business Informatics}} ({{CBI}})},
@@ -163,6 +155,15 @@
   urldate = {2023-02-20},
   langid = {ngerman},
   file = {/Users/werner/Zotero/storage/UCAMXXH7/2016 - Richtlinie (EU) 20161148 des Europäischen Parlame.pdf;/Users/werner/Zotero/storage/6VPFN6L5/HTML.html}
+}
+
+@online{europaischesparlamentundderrat2022333DE01008001Xml,
+  title = {L\_{{2022333DE}}.01008001.Xml},
+  author = {Europäisches Parlament und der Rat},
+  url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX%3A32022L2555},
+  urldate = {2023-04-27},
+  annotation = {Usr\_lan: DE},
+  file = {/Users/werner/Zotero/storage/C7RBJWPW/HTML.html}
 }
 
 @online{European_Commission_NIS2,
