BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -157,9 +157,10 @@
   file = {/Users/werner/Zotero/storage/UCAMXXH7/2016 - Richtlinie (EU) 20161148 des Europäischen Parlame.pdf;/Users/werner/Zotero/storage/6VPFN6L5/HTML.html}
 }
 
-@online{europaischesparlamentundderratRICHTLINIEEU2022,
+@online{europaischesparlamentundderratRICHTLINIEEU20222022,
   title = {{{RICHTLINIE}} ({{EU}}) 2022/2555 {{DES EUROPÄISCHEN PARLAMENTS UND DES RATES}} Über {{Maßnahmen}} Für Ein Hohes Gemeinsames {{Cybersicherheitsniveau}} in Der {{Union}}, Zur {{Änderung}} Der {{Verordnung}} ({{EU}}) {{Nr}}. 910/2014 Und Der {{Richtlinie}} ({{EU}}) 2018/1972 Sowie Zur {{Aufhebung}} Der {{Richtlinie}} ({{EU}}) 2016/1148 ({{NIS-2-Richtlinie}})},
   author = {Europäisches Parlament und der Rat},
+  date = {2022-12-14},
   url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX%3A32022L2555},
   urldate = {2023-04-27},
   annotation = {Usr\_lan: DE},
