--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -147,6 +147,16 @@
   file = {/Users/werner/Zotero/storage/ISUBLJEM/HTML.html}
 }
 
+@online{EU_NIS2_Richtlinie,
+  title = {{{RICHTLINIE}} ({{EU}}) 2022/2555 {{DES EUROPÄISCHEN PARLAMENTS UND DES RATES}} Über {{Maßnahmen}} Für Ein Hohes Gemeinsames {{Cybersicherheitsniveau}} in Der {{Union}}, Zur {{Änderung}} Der {{Verordnung}} ({{EU}}) {{Nr}}. 910/2014 Und Der {{Richtlinie}} ({{EU}}) 2018/1972 Sowie Zur {{Aufhebung}} Der {{Richtlinie}} ({{EU}}) 2016/1148 ({{NIS-2-Richtlinie}})},
+  author = {Europäisches Parlament und der Rat},
+  date = {2022-12-14},
+  url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX%3A32022L2555},
+  urldate = {2023-04-27},
+  annotation = {Usr\_lan: DE},
+  file = {/Users/werner/Zotero/storage/C7RBJWPW/HTML.html}
+}
+
 @online{EU_RichtlinieEU20162016,
   title = {Richtlinie (EU) 2016/1148 des Europäischen Parlaments und des Rates vom 6. Juli 2016 über Maßnahmen zur Gewährleistung eines hohen gemeinsamen Sicherheitsniveaus von Netz- und Informationssystemen in der Union},
   author = {European Parliament {and} the Council of the European Union},
@@ -155,16 +165,6 @@
   urldate = {2023-02-20},
   langid = {ngerman},
   file = {/Users/werner/Zotero/storage/UCAMXXH7/2016 - Richtlinie (EU) 20161148 des Europäischen Parlame.pdf;/Users/werner/Zotero/storage/6VPFN6L5/HTML.html}
-}
-
-@online{europaischesparlamentundderratRICHTLINIEEU20222022,
-  title = {{{RICHTLINIE}} ({{EU}}) 2022/2555 {{DES EUROPÄISCHEN PARLAMENTS UND DES RATES}} Über {{Maßnahmen}} Für Ein Hohes Gemeinsames {{Cybersicherheitsniveau}} in Der {{Union}}, Zur {{Änderung}} Der {{Verordnung}} ({{EU}}) {{Nr}}. 910/2014 Und Der {{Richtlinie}} ({{EU}}) 2018/1972 Sowie Zur {{Aufhebung}} Der {{Richtlinie}} ({{EU}}) 2016/1148 ({{NIS-2-Richtlinie}})},
-  author = {Europäisches Parlament und der Rat},
-  date = {2022-12-14},
-  url = {https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX%3A32022L2555},
-  urldate = {2023-04-27},
-  annotation = {Usr\_lan: DE},
-  file = {/Users/werner/Zotero/storage/C7RBJWPW/HTML.html}
 }
 
 @online{European_Commission_NIS2,
