BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -437,7 +437,7 @@
   file = {/Users/werner/Zotero/storage/FT7VESTX/OVE_EN_50600-2-2_2019_09_01.html}
 }
 
-@misc{EN50600-2-3,
+@misc{OVE_EN50600-2-33,
   title = {{{EN}} 50600-2-3:2019; {{Informationstechnik}} - {{Einrichtungen}} Und {{Infrastrukturen}} von {{Rechenzentren}}, {{Teil}} 2-3: {{Regelung}} Der {{Umgebungsbedingungen}}},
   author = {OVE Österreichischer Verband für Elektortechnik},
   url = {https://lesesaal.austrian-standards.at/action/de/private/details/661517/OVE_EN_50600-2-3_2019_09_01},
