--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -496,18 +496,19 @@
   file = {/Users/werner/Zotero/storage/R6J4HUQJ/Pries-Heje et al. - Strategies for Design Science Research Evaluation.pdf}
 }
 
+@online{rechtsinformationssystemdesbundesRISNetzUnd,
+  title = {{{RIS}} - {{Netz-}} Und {{Informationssystemsicherheitsgesetz}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
+  author = {Rechtsinformationssystem des Bundes},
+  url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010536},
+  urldate = {2023-02-20},
+  file = {/Users/werner/Zotero/storage/JUZYY3LB/GeltendeFassung.html}
+}
+
 @online{RIS_DSFAVerarbeitungsvorgangeFur,
   title = {{{RIS}} - {{Verarbeitungsvorgänge}}, Für Die Eine {{Datenschutz-Folgenabschätzung}} Durchzuführen Ist - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 17.03.2023},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010375},
   urldate = {2023-03-17},
   file = {/Users/werner/Zotero/storage/BZS8HVY4/GeltendeFassung.html}
-}
-
-@online{RISNetzUnd,
-  title = {{{RIS}} - {{Netz-}} Und {{Informationssystemsicherheitsgesetz}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
-  url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010536},
-  urldate = {2023-02-20},
-  file = {/Users/werner/Zotero/storage/JUZYY3LB/GeltendeFassung.html}
 }
 
 @online{RISVerordnungUber,
