BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -506,6 +506,7 @@
 
 @online{RIS_DSFAVerarbeitungsvorgangeFur,
   title = {{{RIS}} - {{Verarbeitungsvorgänge}}, Für Die Eine {{Datenschutz-Folgenabschätzung}} Durchzuführen Ist - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 17.03.2023},
+  author = {Rechtsinformationssystem des Bundes},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010375},
   urldate = {2023-03-17},
   file = {/Users/werner/Zotero/storage/BZS8HVY4/GeltendeFassung.html}
@@ -513,6 +514,7 @@
 
 @online{RISVerordnungUber,
   title = {{{RIS}} - {{Netz-}} Und {{Informationssystemsicherheitsverordnung}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 25.04.2023},
+  author = {Rechtsinformationssystem des Bundes},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010722},
   urldate = {2023-04-25},
   file = {/Users/werner/Zotero/storage/83VZTAD2/GeltendeFassung.html}
