BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -522,6 +522,7 @@
 
 @online{RISVerordnungUber_Quasten,
   title = {{{RIS}} - {{Verordnung}} Über Qualifizierte {{Stellen}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
+  author = {Rechtsinformationssystem des Bundes},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010733},
   urldate = {2023-02-20},
   file = {/Users/werner/Zotero/storage/W4ITLUX3/GeltendeFassung.html}
