--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -512,7 +512,7 @@
   file = {/Users/werner/Zotero/storage/BZS8HVY4/GeltendeFassung.html}
 }
 
-@online{RISVerordnungUber,
+@misc{RISVerordnungUber,
   title = {{{RIS}} - {{Netz-}} Und {{Informationssystemsicherheitsverordnung}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 25.04.2023},
   author = {Rechtsinformationssystem des Bundes},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010722},
