BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -513,7 +513,7 @@
 }
 
 @misc{RISVerordnungUber,
-  title = {{{RIS}} - {{Netz-}} Und {{Informationssystemsicherheitsverordnung}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 25.04.2023},
+  title = {Netz- Und {{Informationssystemsicherheitsverordnung}} – {{NISV}}},
   author = {Rechtsinformationssystem des Bundes},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010722},
   urldate = {2023-04-25},
