BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -515,6 +515,7 @@
 @misc{RISVerordnungUber,
   title = {Netz- Und {{Informationssystemsicherheitsverordnung}} – {{NISV}}},
   author = {Bundeskanzleramt Österreich},
+  date = {2019-07-17},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010722},
   urldate = {2023-04-25},
   file = {/Users/werner/Zotero/storage/83VZTAD2/GeltendeFassung.html}
