--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -81,9 +81,9 @@
   keywords = {DSR}
 }
 
-@online{bundeskanzleramtosterreichRISNetzUnd,
+@online{bundeskanzleramtRISNetzUnd,
   title = {{{RIS}} - {{Netz-}} Und {{Informationssystemsicherheitsgesetz}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
-  author = {Bundeskanzleramt Österreich},
+  author = {Bundeskanzleramt},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010536},
   urldate = {2023-02-20},
   file = {/Users/werner/Zotero/storage/JUZYY3LB/GeltendeFassung.html}
