BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -514,7 +514,7 @@
 
 @misc{RISVerordnungUber,
   title = {Netz- Und {{Informationssystemsicherheitsverordnung}} – {{NISV}}},
-  author = {Bundeskanzleramt Österreich},
+  author = {Bundeskanzleramt},
   date = {2019-07-17},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010722},
   urldate = {2023-04-25},
