BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -81,14 +81,6 @@
   keywords = {DSR}
 }
 
-@online{bundeskanzleramtRISNetzUnd,
-  title = {{{RIS}} - {{Netz-}} Und {{Informationssystemsicherheitsgesetz}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
-  author = {Bundeskanzleramt},
-  url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010536},
-  urldate = {2023-02-20},
-  file = {/Users/werner/Zotero/storage/JUZYY3LB/GeltendeFassung.html}
-}
-
 @misc{CISCSC,
   title = {{{CIS Critical Security Controls Version}} 8},
   shorttitle = {{{CIS CSC V8}}},
@@ -510,6 +502,14 @@
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010375},
   urldate = {2023-03-17},
   file = {/Users/werner/Zotero/storage/BZS8HVY4/GeltendeFassung.html}
+}
+
+@online{RISNetzUnd,
+  title = {{{RIS}} - {{Netz-}} Und {{Informationssystemsicherheitsgesetz}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
+  author = {Bundeskanzleramt},
+  url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010536},
+  urldate = {2023-02-20},
+  file = {/Users/werner/Zotero/storage/JUZYY3LB/GeltendeFassung.html}
 }
 
 @misc{RISVerordnungUber,
