BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -504,7 +504,7 @@
   file = {/Users/werner/Zotero/storage/BZS8HVY4/GeltendeFassung.html}
 }
 
-@online{RISNetzUnd,
+@misc{RISNetzUnd,
   title = {{{RIS}} - {{Netz-}} Und {{Informationssystemsicherheitsgesetz}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
   author = {Bundeskanzleramt},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010536},
