--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -505,7 +505,7 @@
 }
 
 @misc{RISNetzUnd,
-  title = {{{RIS}} - {{Netz-}} Und {{Informationssystemsicherheitsgesetz}} - {{Bundesrecht}} Konsolidiert, {{Fassung}} Vom 20.02.2023},
+  title = {Netz- Und {{Informationssystemsicherheitsgesetz}} – {{NISG}} Und {{Änderung}} Des {{Telekommunikationsgesetzes}} 2003},
   author = {Bundeskanzleramt},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010536},
   urldate = {2023-02-20},
