BibLaTeX updated by Better BibTeX for Zotero

--- a/Masterthesis2023_Zotero.bib
+++ b/Masterthesis2023_Zotero.bib
@@ -507,6 +507,7 @@
 @misc{RISNetzUnd,
   title = {Netz- Und {{Informationssystemsicherheitsgesetz}} – {{NISG}} Und {{Änderung}} Des {{Telekommunikationsgesetzes}} 2003},
   author = {Bundeskanzleramt},
+  date = {2018-12-28},
   url = {https://www.ris.bka.gv.at/GeltendeFassung.wxe?Abfrage=Bundesnormen&Gesetzesnummer=20010536},
   urldate = {2023-02-20},
   file = {/Users/werner/Zotero/storage/JUZYY3LB/GeltendeFassung.html}
